update staging dir index
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@26967 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/staging/index.html
+++ b/download.jboss.org/jbosstools/updates/staging/index.html
@@ -46,15 +46,24 @@ http://download.jboss.org/jbosstools/updates/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=3.2.0.Beta1/jbosstools-drools-Update.zip>3.2.0.Beta1/jbosstools-drools-Update.zip</a></li>
-<li><a class=link href=3.2.0.Beta1/jbpm-Update.zip>3.2.0.Beta1/jbpm-Update.zip</a></li>
-<li><a class=link href=3.2.0.Beta1/usage-Update.zip>3.2.0.Beta1/usage-Update.zip</a></li>
+<li><a class=link href=3.2_trunk/esb-Update.zip>3.2_trunk/esb-Update.zip</a></li>
+<li><a class=link href=3.2_trunk/jbosstools-3.2_trunk.aggregate-Update.zip>3.2_trunk/jbosstools-3.2_trunk.aggregate-Update.zip</a></li>
+<li><a class=link href=3.2_trunk/jbosstools-drools-5.2-Update.zip>3.2_trunk/jbosstools-drools-5.2-Update.zip</a></li>
+<li><a class=link href=3.2_trunk/jbpm-Update.zip>3.2_trunk/jbpm-Update.zip</a></li>
+<li><a class=link href=3.2_trunk/modeshape-Update.zip>3.2_trunk/modeshape-Update.zip</a></li>
+<li><a class=link href=3.2_trunk/usage-Update.zip>3.2_trunk/usage-Update.zip</a></li>
 <br/>
-<li><a class=link href=3.2.0.Beta2/jbosstools-drools-Update.zip>3.2.0.Beta2/jbosstools-drools-Update.zip</a></li>
-<li><a class=link href=3.2.0.Beta2/jbpm-Update.zip>3.2.0.Beta2/jbpm-Update.zip</a></li>
-<li><a class=link href=3.2.0.Beta2/usage-Update.zip>3.2.0.Beta2/usage-Update.zip</a></li>
+<li><a class=link href=3.2_stable_branch/esb-Update.zip>3.2_stable_branch/esb-Update.zip</a></li>
+<li><a class=link href=3.2_stable_branch/jbosstools-3.2_stable_branch.aggregate-Update.zip>3.2_stable_branch/jbosstools-3.2_stable_branch.aggregate-Update.zip</a></li>
+<li><a class=link href=3.2_stable_branch/jbosstools-drools-5.2-Update.zip>3.2_stable_branch/jbosstools-drools-5.2-Update.zip</a></li>
+<li><a class=link href=3.2_stable_branch/jbpm-Update.zip>3.2_stable_branch/jbpm-Update.zip</a></li>
+<li><a class=link href=3.2_stable_branch/modeshape-Update.zip>3.2_stable_branch/modeshape-Update.zip</a></li>
+<li><a class=link href=3.2_stable_branch/usage-Update.zip>3.2_stable_branch/usage-Update.zip</a></li>
 <br/>
-<li><a class=link href=jbosstools-teiid-designer-Update.zip>jbosstools-teiid-designer-Update.zip</a></li>
+<li><a class=link href=jbosstools-teiid-designer-7.1_trunk-Update.zip>jbosstools-teiid-designer-7.1_trunk-Update.zip</a></li>
+<br/>
+<li><a class=link href=jbosstools-teiid-designer-7.1_stable_branch-Update.zip>jbosstools-teiid-designer-7.1_stable_branch-Update.zip</a></li>
+
 				</ul>
 				<br/>
 				</td>
