replace carbon w/ cocoa-x86_64
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27122 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/requirements/helios/index.html
+++ b/download.jboss.org/jbosstools/requirements/helios/index.html
@@ -60,7 +60,7 @@ http://download.jboss.org/jbosstools/requirements/helios/
 <li><a class=link href=dtp_1.8.1.zip>dtp_1.8.1.zip</a></li>
 <li><a class=link href=eclipse-SDK-3.6.1-linux-gtk-x86_64.tar.gz>eclipse-SDK-3.6.1-linux-gtk-x86_64.tar.gz</a></li>
 <li><a class=link href=eclipse-SDK-3.6.1-linux-gtk.tar.gz>eclipse-SDK-3.6.1-linux-gtk.tar.gz</a></li>
-<li><a class=link href=eclipse-SDK-3.6.1-macosx-carbon.tar.gz>eclipse-SDK-3.6.1-macosx-carbon.tar.gz</a></li>
+<li><a class=link href=eclipse-SDK-3.6.1-macosx-cocoa-x86_64.tar.gz>eclipse-SDK-3.6.1-macosx-cocoa-x86_64.tar.gz</a></li>
 <li><a class=link href=eclipse-SDK-3.6.1-macosx-cocoa.tar.gz>eclipse-SDK-3.6.1-macosx-cocoa.tar.gz</a></li>
 <li><a class=link href=eclipse-SDK-3.6.1-win32.zip>eclipse-SDK-3.6.1-win32.zip</a></li>
 <li><a class=link href=eclipse-test-framework-3.6.1.zip>eclipse-test-framework-3.6.1.zip</a></li>
