--- a/download.jboss.org/jbosstools/requirements/helios/index.html
+++ b/download.jboss.org/jbosstools/requirements/helios/index.html
@@ -73,7 +73,7 @@ http://download.jboss.org/jbosstools/requirements/helios/
 <li><a class=link href=org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
 <li><a class=link href=org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
 <li><a class=link href=swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip>swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=spring-ide-2.5.0.201009082100-CI-R3828-B183.zip>spring-ide-2.5.0.201009082100-CI-R3828-B183.zip</a></li>
+<li><a class=link href=spring-ide-2.5.1.201011101000-RELEASE.zip>spring-ide-2.5.1.201011101000-RELEASE.zip</a></li>
 <li><a class=link href=tptp.runtime-TPTP-4.7.1.zip>tptp.runtime-TPTP-4.7.1.zip</a></li>
 <li><a class=link href=mdt-uml2-runtime-3.1.1.zip>mdt-uml2-runtime-3.1.1.zip</a></li>
 <li><a class=link href=wtp-R-3.2.2-20100915173744.zip>wtp-R-3.2.2-20100915173744.zip</a></li>
