--- a/download.jboss.org/jbosstools/requirements/index.html
+++ b/download.jboss.org/jbosstools/requirements/index.html
@@ -1,98 +1,5 @@
 <html>
 <head>
-<title>JBoss Tools Build Requirements - Helios (Eclipse 3.6 / Web Tools 3.2)</title>
-<style>
-@import url("../web/site.css");
-</style>
+<meta http-equiv="refresh" content="0;url=helios/">
 </head>
-<body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
-<table marginheight="0" marginwidth="0" leftmargin="0" topmargin="0"
-	cellspacing="0" cellpadding="0">
-	<tr>
-		<td colspan="2"><img
-			src="https://www.jboss.org/dms/tools/images/tools-banner.png" /></td>
-	</tr>
-	<tr>
-		<td>&#160;&#160;</td>
-	</tr>
-	<tr>
-		<td>&#160;&#160;</td>
-		<td>
-		<h2 class="title">JBoss Tools Build Requirements - Helios (Eclipse 3.6 / Web Tools 3.2)</h2>
-		<table width="100%">
-
-			<!-- <tr class="light-row" style="height: 30px">
-				<td class="bodyText">
-				<p class="bodyText"></p>
-				</td>
-			</tr> -->
-
-			<tr class="dark-row" style="height: 30px">
-				<td class="bodyText">
-				<!-- <p class="bodyText"></p> -->
-
-<!-- to convert raw fish listing to links do this in vi
-
-:%s#^sftp://tools@filemgmt.jboss.org/downloads_htdocs/tools/requirements/helios/\(.\+\)$#<li><a class=link href=helios/\1>\1<\/a></li>#g
-
-Then sftp file into 
-
-tools@filemgmt.jboss.org/downloads_htdocs/tools/requirements/helios/
-
-which becomes 
-
-http://download.jboss.org/jbosstools/requirements/helios/
-
--->
-				<br/>
-				<ul>
-<li><a class=link href=helios/GEF-runtime-M201007121555.zip>GEF-runtime-M201007121555.zip</a></li>
-<li><a class=link href=helios/GEF-zest-M201007121555.zip>GEF-zest-M201007121555.zip</a></li>
-<li><a class=link href=helios/README.txt>README.txt</a></li>
-<li><a class=link href=helios/Subvsve079.I201005121900_SVNconn222.I201005121900_SVNKit133.6648_JNA323_ECF310.v201005082345-Update.zip>Subvsve079.I201005121900_SVNconn222.I201005121900_SVNKit133.6648_JNA323_ECF310.v201005082345-Update.zip</a></li>
-<li><a class=link href=helios/b3.aggregator-repo-0.1.0.r01001_e36.zip>b3.aggregator-repo-0.1.0.r01001_e36.zip</a></li>
-<li><a class=link href=helios/birt-report-framework-2_6_0.zip>birt-report-framework-2_6_0.zip</a></li>
-<li><a class=link href=helios/birt-wtp-integration-sdk-2_6_0.zip>birt-wtp-integration-sdk-2_6_0.zip</a></li>
-<li><a class=link href=helios/buckminster-repo-1.3.0.r11439_e36.zip>buckminster-repo-1.3.0.r11439_e36.zip</a></li>
-<li><a class=link href=helios/buckminster-updates-3.5_20100125-r11098.zip>buckminster-updates-3.5_20100125-r11098.zip</a></li>
-<li><a class=link href=helios/dtp_1.8.0.zip>dtp_1.8.0.zip</a></li>
-<li><a class=link href=helios/eclipse-SDK-3.6-linux-gtk-x86_64.tar.gz>eclipse-SDK-3.6-linux-gtk-x86_64.tar.gz</a></li>
-<li><a class=link href=helios/eclipse-SDK-3.6-linux-gtk.tar.gz>eclipse-SDK-3.6-linux-gtk.tar.gz</a></li>
-<li><a class=link href=helios/eclipse-SDK-3.6-macosx-carbon.tar.gz>eclipse-SDK-3.6-macosx-carbon.tar.gz</a></li>
-<li><a class=link href=helios/eclipse-SDK-3.6-macosx-cocoa.tar.gz>eclipse-SDK-3.6-macosx-cocoa.tar.gz</a></li>
-<li><a class=link href=helios/eclipse-SDK-3.6-win32.zip>eclipse-SDK-3.6-win32.zip</a></li>
-<li><a class=link href=helios/eclipse-test-framework-3.6.zip>eclipse-test-framework-3.6.zip</a></li>
-<li><a class=link href=helios/emf-runtime-2.6.0.zip>emf-runtime-2.6.0.zip</a></li>
-<li><a class=link href=helios/m2eclipse/build.xml>m2eclipse/build.xml</a></li>
-<li><a class=link href=helios/m2eclipse-0.10.0.20100209-0800.zip>m2eclipse-0.10.0.20100209-0800.zip</a></li>
-<li><a class=link href=helios/org.eclipse.equinox.transforms.hook_1.0.200.v20100503.jar>org.eclipse.equinox.transforms.hook_1.0.200.v20100503.jar</a></li>
-<li><a class=link href=helios/org.eclipse.equinox.transforms.xslt_1.0.200.v20100503.jar>org.eclipse.equinox.transforms.xslt_1.0.200.v20100503.jar</a></li>
-<li><a class=link href=helios/org.eclipse.releng.basebuilder_R36_RC4.zip>org.eclipse.releng.basebuilder_R36_RC4.zip</a></li>
-<li><a class=link href=helios/org.eclipse.swtbot.eclipse-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=helios/org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=helios/org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=helios/swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip>swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
-<li><a class=link href=helios/svn/build.xml>svn/build.xml</a></li>
-<li><a class=link href=helios/tptp.runtime-TPTP-4.7.0.zip>tptp.runtime-TPTP-4.7.0.zip</a></li>
-<li><a class=link href=helios/wtp-R-3.2.0-20100615235519.zip>wtp-R-3.2.0-20100615235519.zip</a></li>
-<li><a class=link href=helios/xsd-runtime-2.6.0.zip>xsd-runtime-2.6.0.zip</a></li>
-<li><a class=link href=helios/xulrunner/README.txt>xulrunner</a></li>
-				</ul>
-				<br/>
-				</td>
-			</tr>
-
-			<tr class="light-row" style="height: 30px">
-				<td class="bodyText">
-				<p class="bodyText">Looking to download JBoss Tools? See <a class="link"
-					href="http://www.jboss.org/tools/download">JBoss Tools
-				Downloads</a>. See also <a
-					href="http://www.jboss.org/tools/download/installation">Installation
-				methods</a>.</p>
-				</td>
-			</tr>
-		</table>
-		</td>
-	</tr>
-</table>
-</html>
+<body></body></html>
