fix HTML for latest target platform; set redirect from root into ./latest; redirect helios site to latest target platform
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28311 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/target-platform/latest/index.html
+++ b/download.jboss.org/jbosstools/updates/target-platform/latest/index.html
@@ -20,34 +20,16 @@
 		<td>
 		<h2 class="title">JBoss Tools Build Target Platform Update Site - Helios (Eclipse 3.6 / Web Tools 3.2)</h2>
 		<table width="100%">
-
-			<!-- <tr class="light-row" style="height: 30px">
-				<td class="bodyText">
-				<p class="bodyText"></p>
-				</td>
-			</tr> -->
-
 			<tr class="dark-row" style="height: 30px">
 				<td class="bodyText">
-				<!-- <p class="bodyText"></p> -->
-
-<!-- to convert raw fish listing to links do this in vi
-
-:%s#^sftp://tools@filemgmt.jboss.org/downloads_htdocs/tools/updates/requirements/\(.\+\)$#<li><a class=link href=\1>\1<\/a></li>#g
-
-Then sftp file into 
-
-tools@filemgmt.jboss.org/downloads_htdocs/tools/updates/requirements/
-
-which becomes 
-
-http://download.jboss.org/jbosstools/updates/requirements/
-
--->
 				<br/>
 				<ul>
-<li><a class=link href=../latest>latest target platform build</a> - point Eclipse at this site and install the uncategorized features</li>
-<li><a class=link href=../e361-wtp322.target.zip>zip of latest target platform</a> (692M)</li>
+<li>Eclipse Helios 3.6 / Web Tools 3.2 / other dependencies
+<ul>
+<li><a class=link href=../latest>latest target platform build</a> - point Eclipse at this site and install the <b>uncategorized</b> features</li>
+<li><a class=link href=../e361-wtp322.target.zip>latest target platform zip</a> (<a class=link href=e361-wtp322.target.zip.MD5>MD5</a>) - approx. 1.2 Gb</li>
+</ul>
+				</ul>
 				</ul>
 				<br/>
 				</td>
