update both trunk and branch cascade pages
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28314 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/builds/cascade/trunk.html
+++ b/download.jboss.org/jbosstools/builds/cascade/trunk.html
@@ -7,6 +7,11 @@
 @import url("../../web/site.css");
 </style>
 </head>
+<!--
+	s#_trunk#_stable_branch#g
+	s#_Trunk#_Stable_Branch#g
+	s#/trunk#/3.2_stable_branch#g
+-->
 <body>
 <body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
 <table marginheight="0" marginwidth="0" leftmargin="0" topmargin="0"
@@ -37,7 +42,7 @@
 					href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_trunk.tests">Tests
 				build</a> (build + tests, no publish)</li>
 				<li><em><a style="color: red"
-					href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_stable_branch.nightly">Nightly
+					href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_trunk.nightly">Nightly
 				build</a> (build + tests, publish) :: disabled in favour of 30+
 				per-component jobs :: <b>deprecated</b></em></li>
 				<li><a style="color: red"
@@ -57,13 +62,12 @@
 						by JBDS uberbuild) :: <b>deprecated</b></em>
 						</li>
 					</ul>
-
 					</li>
 				</ul>
 			</ul>
 					<hr />
 			<li><a style="color: red"
-				href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0.target-platform">Local
+				href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_trunk.target-platform">Local
 			JBDS Target Platform build</a> (build + publish)
 			<ul>
 				<ul>
@@ -92,7 +96,7 @@
 		<h2 class="title">Results:</h2>
 		<ul>
 			<li>JBT Target Platform build: <a
-				href="http://download.jboss.org/jbosstools/updates/target-platform/">http://download.jboss.org/jbosstools/updates/target-platform/</a>
+				href="http://download.jboss.org/jbosstools/updates/target-platform/latest/">http://download.jboss.org/jbosstools/updates/target-platform/latest/</a>
 			<ul>
 				<li>JBT Component builds: <a
 					href="http://download.jboss.org/jbosstools/builds/staging/">http://download.jboss.org/jbosstools/builds/staging/</a>
@@ -121,16 +125,14 @@
 						<li>JBDS Product builds: <a style="color: red"
 							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_trunk.product/builds/nightly/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/</a>
 						:: <a style="color: red"
-							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_trunk.product/builds/nightly/trunk/latestBuild.html">latest
-						from trunk</a> :: <a style="color: red"
-							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_trunk.product/updates/nightly/trunk/">updates</a></li>
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_trunk.product/builds/nightly/">latest</a> :: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_trunk.product/updates/nightly/">updates</a></li>
 
 						<ul><li><em>JBDS "Uberbuild" builds: <a style="color: red"
 							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/</a>
 						:: <a style="color: red"
-							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/trunk/latestBuild.html">latest
-						from trunk</a> :: <a style="color: red"
-							href="http://reports.qa.atl.jboss.com/binaries/RHDS/updates/nightly/trunk/">updates</a>
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/">latest</a> :: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/updates/nightly/">updates</a>
 						:: <b>deprecated</b> </em></li></ul>
 					</ul>
 				</ul>
@@ -140,5 +142,6 @@
 		</td>
 	</tr>
 </table>
+<p align="right"><i><small>Last updated 2011-01-17 13:19 GMT-5</small></i></p>
 </body>
 </html>
