--- a/download.jboss.org/jbosstools/builds/cascade/index.html
+++ b/download.jboss.org/jbosstools/builds/cascade/index.html
@@ -7,13 +7,19 @@
 @import url("../../web/site.css");
 </style>
 </head>
+<!--
+	s#_trunk#_stable_branch#g
+	s#_Trunk#_Stable_Branch#g
+	s#/trunk#/3.2_stable_branch#g
+-->
 <body>
 <body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
 <table marginheight="0" marginwidth="0" leftmargin="0" topmargin="0"
 	cellspacing="0" cellpadding="0">
 	<tr>
 		<td colspan="2"><a href="https://www.jboss.org/tools"><img
-			src="https://www.jboss.org/dms/tools/images/tools-banner.png" border="0"/></a></td>
+			src="https://www.jboss.org/dms/tools/images/tools-banner.png"
+			border="0" /></a></td>
 	</tr>
 	<tr>
 		<td class="bodyText">&#160;&#160;</td>
@@ -21,8 +27,8 @@
 	<tr>
 		<td class="bodyText">&#160;&#160;</td>
 		<td class="bodyText">
-<p class="bodyText"><i>Note: <b style="color: red">red links</b> require VPN
-access.</i>
+		<p class="bodyText"><i>Note: <b style="color: red">red
+		links</b> require VPN access.</i>
 <h2 class="title">Build Job Cascade:</h2>
 <ul>
 	<li><a style="color: red"
@@ -35,35 +41,49 @@ access.</i>
 		<li><a style="color: red"
 			href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_stable_branch.tests">Tests
 		build</a> (build + tests, no publish)</li>
-		<li><a style="color: red"
-			href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_stable_branch.nightly">Nightly
-		build</a> (build + tests, publish)</li>
-	        <li><a style="color: red" href="http://hudson.qa.jboss.com/hudson/view/DevStudio_Stable_Branch/">drools, teiid, pi4soa, savara</a> (other components: build, test, publish)</a></li>
+		<li><em><a style="color: red"
+					href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_stable_branch.nightly">Nightly
+				build</a> (build + tests, publish) :: disabled in favour of 30+
+				per-component jobs :: <b>deprecated</b></em></li>
+				<li><a style="color: red"
+					href="http://hudson.qa.jboss.com/hudson/view/DevStudio_Stable_Branch/">All
+				components' jobs, including JBT core + drools, teiid, pi4soa, savara</a>
+				(build, test, publish) :: <b><a style="color: red"
+					href="http://hudson.qa.jboss.com/hudson/view/DevStudio_Stable_Branch/portlet/dashboard_portlet_13/">list
+				of unstable jobs</a></b></li>
 		<ul>
 			<li><a style="color: red"
-				href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_stable_branch.aggregate-publish">Aggregate
-			build publisher</a> (publish select pieces of aggregate site for use by
-			JBDS uberbuild)
-			<hr />
-			</li>
-</ul>
+						href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_stable_branch.aggregate">Aggregate
+					build</a> (collect components into a single update site for downstream use and publishing to sf.net)
+					<ul>
+						<li><em><a style="color: red"
+							href="http://hudson.qa.jboss.com/hudson/job/jbosstools-3.2_stable_branch.aggregate-publish">Aggregate
+						build publisher</a> (publish select pieces of aggregate site for use
+						by JBDS uberbuild) :: <b>deprecated</b></em>
+						</li>
+					</ul>
+					</li>
+				</ul>
+			</ul>
+					<hr />
 			<li><a style="color: red"
-				href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0.target-platform">Local
+				href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_stable_branch.target-platform">Local
 			JBDS Target Platform build</a> (build + publish)
 			<ul>
+				<ul>
 				<li><a style="color: red"
-					href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_stable_branch.updatesite">JBDS
-				Aggregate site build</a> (build core [JBT + JBDS], third-party, and
-				preview sites, publish)
+						href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_stable_branch.updatesite">JBDS
+					Aggregate site build</a> (build Core [JBT + JBDS], Extras, Tech Preview
+					sites, then publish)
 				<ul>
 					<li><a style="color: red"
-						href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_stable_branch.product">JBDS
-					Product build (experimental)</a> (combine JBDS components + TP into
-					installers, publish)</li>
-					<li><em><a style="color: red"
-						href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_stable_branch.uberbuild">JBDS
-					PDE "Uberbuilder" build</a> (compile JBDS components + some aggregate
-					pieces into installers, publish) :: deprecated</em></li>
+							href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_stable_branch.product">JBDS
+						Product builds</a> (combine JBDS components + TP into installers,
+						publish)</li>
+						<ul><li><em><a style="color: red"
+							href="http://hudson.qa.jboss.com/hudson/job/devstudio-4.0_stable_branch.uberbuild">JBDS
+						PDE "Uberbuild" builds</a> (compile JBDS components + some aggregate
+						pieces into installers, publish) :: <b>deprecated</b></em></li></ul>
 				</ul>
 				</li>
 			</ul>
@@ -75,45 +95,53 @@ access.</i>
 </ul>
 <h2 class="title">Results:</h2>
 <ul>
-	<li>JBT Aggregate update sites: <a
-		href="http://download.jboss.org/jbosstools/updates/nightly/">http://download.jboss.org/jbosstools/updates/nightly/</a>
-	:: <a
-		href="http://download.jboss.org/jbosstools/updates/nightly/trunk/">latest
-	from trunk</a></li>
+			<li>JBT Target Platform build: <a
+				href="http://download.jboss.org/jbosstools/updates/target-platform/latest/">http://download.jboss.org/jbosstools/updates/target-platform/latest/</a>
+			<ul>
+				<li>JBT Component builds: <a
+					href="http://download.jboss.org/jbosstools/builds/staging/">http://download.jboss.org/jbosstools/builds/staging/</a>
+				:: <b><a
+					href="http://download.jboss.org/jbosstools/builds/staging/_composite_/3.2_stable_branch/">composite
+				update site</a></b>
+				<ul>
 	<li>JBT Aggregate builds: <a
 		href="http://download.jboss.org/jbosstools/builds/nightly/">http://download.jboss.org/jbosstools/builds/nightly/</a>
 	:: <a
-		href="http://download.jboss.org/jbosstools/builds/nightly/trunk/latestBuild.html">latest
-	from trunk</a>
-	<ul>
-		<li>JBT Component builds: <a
-			href="http://download.jboss.org/jbosstools/builds/staging/">http://download.jboss.org/jbosstools/builds/staging/</a>
+		href="http://download.jboss.org/jbosstools/builds/nightly/3.2_stable_branch/latestBuild.html">latest
+					from trunk</a> :: <a
+						href="http://download.jboss.org/jbosstools/updates/nightly/3.2_stable_branch/">updates</a>
+					<ul><li><em>Select JBT component updates: <a href="http://download.jboss.org/jbosstools/updates/staging/">http://download.jboss.org/jbosstools/updates/staging/</a> (used by "Uberbuild") :: <b>deprecated</b></em></li></ul>
+				</ul>
+			</ul>
 		<hr />
+			<li>JBDS Target Platform build: <a style="color: red"
+				href="http://reports.qa.atl.jboss.com/binaries/RHDS/updates/jbds-target-platform/">http://reports.qa.atl.jboss.com/binaries/RHDS/updates/jbds-target-platform/</a>
 		<ul>
-			<li>JBDS Aggregate update sites: <a style="color: red"
-				href="http://reports.qa.atl.jboss.com/binaries/RHDS/updates/nightly/">http://reports.qa.atl.jboss.com/binaries/RHDS/updates/nightly/</a>
-			:: <a style="color: red"
-				href="http://reports.qa.atl.jboss.com/binaries/RHDS/updates/nightly/trunk/">latest
-			from trunk</a></li>
-			<li>JBDS Product builds: <a style="color: red"
-				href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_stable_branch.product/builds/nightly/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/</a></li>
-			<li><em>JBDS "Uber" builds: <a style="color: red"
-				href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/</a>
-			:: <a style="color: red"
-				href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/trunk/latestBuild.html">latest
-			from trunk</a> :: deprecated </em>
-			<ul>
-				<li>JBDS Component builds: <a style="color: red"
-					href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/</a></li>
-				<li>JBDS Other update sites: <a style="color: red"
-					href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/</a></li>
+				<ul>
+					<li>JBDS Aggregate updates: <a style="color: red"
+						href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_stable_branch.updatesite/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/</a>
+					(Core [JBT + JBDS], Extras, Tech Preview)</li>
+					<ul>
+						<li>JBDS Product builds: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_stable_branch.product/builds/nightly/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/</a>
+						:: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_stable_branch.product/builds/nightly/">latest</a> :: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/staging/devstudio-4.0_stable_branch.product/updates/nightly/">updates</a></li>
+
+						<ul><li><em>JBDS "Uberbuild" builds: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/">http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/</a>
+						:: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/builds/nightly/">latest</a> :: <a style="color: red"
+							href="http://reports.qa.atl.jboss.com/binaries/RHDS/updates/nightly/">updates</a>
+						:: <b>deprecated</b> </em></li></ul>
+			</ul>
+				</ul>
 			</ul>
 			</li>
 		</ul>
-		</li>
-	</ul>
-	</li>
-</ul>
-</td></tr></table>
+		</td>
+	</tr>
+</table>
+<p align="right"><i><small>Last updated 2011-01-17 13:19 GMT-5</small></i></p>
 </body>
 </html>
