add testng-eclipse-Update-5.14.6.20110119_1050.zip + other testng zips, spring-ide-Update-2.5.1.201011101000-RELEASE.zip
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28447 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/requirements/helios/index.html
+++ b/download.jboss.org/jbosstools/requirements/helios/index.html
@@ -73,7 +73,11 @@ http://download.jboss.org/jbosstools/requirements/helios/
 <li><a class=link href=org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.gef-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
 <li><a class=link href=org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip>org.eclipse.swtbot.eclipse.test.junit4-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
 <li><a class=link href=swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip>swtbot-update-site-2.0.1.20101106_1831-73ca7af-dev-e36.zip</a></li>
+<li><a class=link href=spring-ide-Update-2.5.1.201011101000-RELEASE.zip>spring-ide-Update-2.5.1.201011101000-RELEASE.zip</a></li>
 <li><a class=link href=spring-ide-2.5.1.201011101000-RELEASE.zip>spring-ide-2.5.1.201011101000-RELEASE.zip</a></li>
+<li><a class=link href=testng-eclipse-5.8.0.1.zip>testng-eclipse-5.8.0.1.zip</a></li>
+<li><a class=link href=testng-eclipse-5.14.6.20110119.zip>testng-eclipse-5.14.6.20110119.zip</a></li>
+<li><a class=link href=testng-eclipse-Update-5.14.6.20110119_1050.zip>testng-eclipse-Update-5.14.6.20110119_1050.zip</a></li>
 <li><a class=link href=tptp.runtime-TPTP-4.7.1.zip>tptp.runtime-TPTP-4.7.1.zip</a></li>
 <li><a class=link href=mdt-uml2-runtime-3.1.1.zip>mdt-uml2-runtime-3.1.1.zip</a></li>
 <li><a class=link href=wtp-R-3.2.2-20100915173744.zip>wtp-R-3.2.2-20100915173744.zip</a></li>
