add extra / to birt site so it's seen as a DIFFERENT site from the default-listed one, and can be force-enabled by JBT update site
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@28625 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/site/index.html
+++ b/site/index.html
@@ -43,7 +43,7 @@
 				listed - but not enabled - in your Eclipse's list of Available
 				Software Sites:</p>
 				<ul>
-    <li><a href="http://download.eclipse.org/birt/update-site/2.6/">BIRT 2.6 Update Site</a></li>
+    <li><a href="http://download.eclipse.org//birt/update-site/2.6/">BIRT 2.6 Update Site</a></li>
     <li><a href="http://m2eclipse.sonatype.org/sites/m2e/">m2eclipse 0.10 Release</a></li>
     <li><a href="http://m2eclipse.sonatype.org/sites/m2e-extras/">m2eclipse 0.10 Extras</a></li>
     <li><a href="http://subclipse.tigris.org/update_1.6.x"/>Subclipse 1.6 Update Site </a></li>
