--- a/download.jboss.org/jbosstools/updates/helios/index.html
+++ b/download.jboss.org/jbosstools/updates/helios/index.html
@@ -1,6 +1,140 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=http://download.jboss.org/jbosstools/updates/requirements/helios/"> 
+<title>JBoss Tools Requirements - Composite Mirror</title>
+<style>
+@import url("../../web/site.css");
+</style>
 </head>
-</html>
+<body marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
+<table marginheight="0" marginwidth="0" leftmargin="0" topmargin="0"
+	cellspacing="0" cellpadding="0">
+	<tr>
+		<td colspan="2"><img
+			src="https://www.jboss.org/dms/tools/images/tools-banner.png" /></td>
+	</tr>
+	<tr>
+		<td>&#160;&#160;</td>
+	</tr>
+	<tr>
+		<td>&#160;&#160;</td>
+		<td>
+		<h2 class="title">JBoss Tools Requirements - Composite Mirror</h2>
+		<table width="100%">
 
+			<!-- <tr class="light-row" style="height: 30px">
+				<td class="bodyText">
+				<p class="bodyText"></p>
+				</td>
+			</tr> -->
+
+			<tr class="dark-row" style="height: 30px">
+				<td class="bodyText">
+				<!-- <p class="bodyText"></p> -->
+				
+<!-- to convert raw fish listing to links do this in vi
+
+:%s#^sftp://jbossqa@filemgmt.jboss.org/htdocs/jbosstools/updates/\(.\+\)$#<li><a class=link href=\1>\1<\/a></li>#g
+
+Then sftp file into 
+
+jbossqa@filemgmt.jboss.org/htdocs/jbosstools/updates/
+
+which becomes 
+
+http://download.jboss.org/jbosstools/updates/
+
+-->
+				<br/>
+				<ul>
+<li><a class=link href=README.txt>README.txt</a></li>
+<li><a class=link href=compositeArtifacts.xml>compositeArtifacts.xml</a></li>
+<li><a class=link href=compositeContent.xml>compositeContent.xml</a></li>
+				</ul>
+				<br/>
+				</td>
+			</tr>
+
+			<tr class="light-row" style="height: 30px">
+				<td class="bodyText">
+				<p class="bodyText">You can also download JBoss Tools as
+				individual zips for offline installation. See <a class="link"
+					href="http://www.jboss.org/tools/download">JBoss Tools
+				Downloads</a>.</p>
+				</td>
+			</tr>
+
+			<tr class="dark-row" style="height: 30px">
+				<td class="bodyText">
+				<p class="bodyText">For more information, see <a
+					href="http://www.jboss.org/tools/download/installation">Installation
+				methods</a>.</p>
+				</td>
+			</tr>
+			<tr>
+				<td class="spacer"><br />
+				</td>
+				<td class="spacer"><br />
+				</td>
+			</tr>
+		</table>
+		</td>
+	</tr>
+	<tr>
+		<td></td>
+		<td>
+		<table width="100%">
+			<tr class="header">
+				<td class="sub-header" width="100%"><span> Installation
+				Types</span></td>
+			</tr>
+			<tr class="light-row" style="height: 30px">
+				<td class="bodyText">
+				<p class="bodyText">Depending on how close to the bleeding edge
+				you like to be, there are several types of releases available.</p>
+				<br />
+
+				</td>
+			</tr>
+
+			<tr class="dark-row" style="height: 30px">
+				<td class="bodyText">
+				<h4>Stable Releases</h4>
+
+				<p><a href="https://www.jboss.org/tools/download/stable.html">Stable
+				releases</a> are - as indicated by their name - stable.</p><br/>
+
+				</td>
+			</tr>
+
+			<tr class="light-row" style="height: 30px">
+				<td class="bodyText">
+				<h4>Development Milestones</h4>
+
+				<p><a href="https://www.jboss.org/tools/download/dev.html">Development
+				builds</a>, released once per milestone and only a few times a year, are
+				fairly stable, but there may be some things which do not yet work.
+				If you would like to try one of these milestones, we'd greatly
+				appreciate the assistance in testing and <a
+					href="https://jira.jboss.org/jira/browse/JBIDE">reporting of
+				issues in our issue tracker</a>.</p><br/>
+
+				</td>
+			</tr>
+
+			<tr class="dark-row" style="height: 30px">
+				<td class="bodyText">
+				<h4>Nightly Builds</h4>
+
+				<p>The <a
+					href="https://www.jboss.org/tools/download/nightly.html">bleeding
+				edge</a> contains the latest and greatest new features, but nothing is
+				stable or guaranteed - yet. If you're using a Milestone and need a
+				fix, you can update to the latest Nightly, or wait for the next
+				Milestone.</p><br/>
+				</td>
+			</tr>
+		</table>
+		</td>
+	</tr>
+</table>
+</html>
