add composite meta files for JBT 3.0 - 3.2 sites; update index.html pages
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29250 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/index.html
+++ b/download.jboss.org/jbosstools/updates/index.html
@@ -46,23 +46,27 @@ http://download.jboss.org/jbosstools/updates/
 -->
 				<br/>
 				<ul>
+<b>Latest Stable Releases</b><br/>
+<li><a class=link href=stable/helios>JBoss Tools 3.2, Eclipse 3.6 (Helios)</a></li>
+<li><a class=link href=stable/galileo>JBoss Tools 3.1, Eclipse 3.5 (Galileo)</a></li>
+<li><a class=link href=stable/ganymede>JBoss Tools 3.0, Eclipse 3.4 (Ganymede)</a></li>
+<br/>
+<b>Stable Releases</b><br/>
+<li><a class=link href=JBossTools-3.2.0.GA>JBossTools-3.2.0.GA</a></li>
 <li><a class=link href=JBossTools-3.1.1.GA>JBossTools-3.1.1.GA</a></li>
-<li><a class=link href=JBossTools-3.1.0.GA>JBossTools-3.1.0.GA</a></li>
 <li><a class=link href=JBossTools-3.0.3.GA.zip>JBossTools-3.0.3.GA.zip</a></li>
 <li><a class=link href=JBossTools-3.0.3.GA>JBossTools-3.0.3.GA</a></li>
 <li><a class=link href=JBossTools-2.1.2.GA>JBossTools-2.1.2.GA</a></li>
 <li><a class=link href=JBossTools-2.0.1.GA>JBossTools-2.0.1.GA</a></li>
 <li><a class=link href=JBossIDE-2.0.0.Beta2>JBossIDE-2.0.0.Beta2</a></li>
 <br/>
-<li><a class=link href=stable/galileo>JBoss Tools 3.1.x, Eclipse 3.5.2 (Galileo)</a></li>
-<li><a class=link href=stable/ganymede>JBoss Tools 3.0.x, Eclipse 3.4.2 (Ganymede)</a></li>
-<br/>
-<li><a class=link href=development>Development Milestones</a> (toward JBoss Tools 3.2, Eclipse 3.6 (Helios))</li>
+<b>Other Updates</b><br/>
+<li><a class=link href=development>Development Milestones</a> (toward JBoss Tools 3.3, Eclipse 3.7 (Indigo)) <i>-- coming soon!</i></li>
 <li><a class=link href=nightly>Nightly Builds</a></li>
 <br/>
-<li><a class=link href=staging>Staging Update Site Zips</a> (for inclusion in JBDS)
-<li><a class=link href=target-platform>All JBoss Tools dependencies in one update site</a> (for installing or developing JBoss Tools)
-
+<b>Target Platforms</b><br/>
+<li><a class=link href=target-platform>All JBoss Tools 3.2 dependencies in one update site</a> (for installing or developing)
+<li><a class=link href=target-platform_trunk>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing)
 				</ul>
 				<br/>
 				</td>
