add new composite mirror for Indigo deps
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29348 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/indigo/index.html
+++ b/download.jboss.org/jbosstools/updates/indigo/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>JBoss Tools Requirements - Composite Mirror - Helios</title>
+<title>JBoss Tools Requirements - Composite Mirror - Indigo</title>
 <style>
 @import url("../../web/site.css");
 </style>
@@ -18,7 +18,7 @@
 	<tr>
 		<td>&#160;&#160;</td>
 		<td>
-		<h2 class="title">JBoss Tools Requirements - Composite Mirror - Helios</h2>
+		<h2 class="title">JBoss Tools Requirements - Composite Mirror - Indigo</h2>
 		<table width="100%">
 
 			<!-- <tr class="light-row" style="height: 30px">
