new birt and swt mirrors; update index page with new links
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29411 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/index.html
@@ -46,16 +46,27 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=helios>helios</a></li>
-<li><a class=link href=swtbot-helios>swtbot-helios</a></li>
-<li><a class=link href=webtools-3.2>webtools-3.2</a></li>
+<li><a class=link href=indigo>indigo</a></li>
+<li><a class=link href=birt/4.0>birt/4.0</a></li>
+<li><a class=link href=gwt>gwt</a></li>
+<li><a class=link href=swtbot/2.0.3>swtbot/2.0.3</a></li>
+<li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
 <p>
+<li><a class=link href=helios>helios</a></li>
+<li><a class=link href=birt/2.6>birt/2.6</a></li>
+<li><a class=link href=gwt>gwt</a></li>
+<li><a class=link href=helios_orbit>helios_orbit</a></li>
 <li><a class=link href=orbit>orbit</a></li>
 <li><a class=link href=thirdparty>thirdparty</a></li>
-<p>
-<li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
-<li><a class=link href=xulrunner-1.9.2>xulrunner-1.9.2</a></li>
+<li><a class=link href=swtbot-helios>swtbot-helios</a></li>
+<li><a class=link href=webtools-3.2>webtools-3.2</a></li>
 <li><a class=link href=xulrunner>xulrunner</a></li>
+<li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
+<li><a class=link href=xulrunner-1.9.1.2_201009022134>xulrunner-1.9.1.2_201009022134</a></li>
+<li><a class=link href=xulrunner-1.9.2>xulrunner-1.9.2</a></li>
+<p>
+<li><a class=link href=galileo>galileo</a></li>
+
 				</ul>
 				<br/>
 				</td>
