add section dividers to index
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29427 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>JBoss Tools Build Requirements - Helios (Eclipse 3.6 / Web Tools 3.2) - Update Sites</title>
+<title>JBoss Tools Build Requirements - Update Sites</title>
 <style>
 @import url("../../web/site.css");
 </style>
@@ -18,7 +18,7 @@
 	<tr>
 		<td>&#160;&#160;</td>
 		<td>
-		<h2 class="title">JBoss Tools Build Requirements - Helios (Eclipse 3.6 / Web Tools 3.2) - Update Sites</h2>
+		<h2 class="title">JBoss Tools Build Requirements - Update Sites</h2>
 		<table width="100%">
 
 			<!-- <tr class="light-row" style="height: 30px">
@@ -46,6 +46,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
+<h2>JBoss Tools 3.3 / Eclipse 3.7 Indigo / Web Tools 3.3</h2>
 <li><a class=link href=indigo>indigo</a></li>
 <li><a class=link href=birt/4.0>birt/4.0</a></li>
 <li><a class=link href=gwt>gwt</a></li>
@@ -55,6 +56,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
 <li><a class=link href=xulrunner-1.9.2>xulrunner-1.9.2</a></li>
 <p>
+<h2>JBoss Tools 3.2 / Eclipse 3.6 Helios / Web Tools 3.2</h2>
 <li><a class=link href=helios>helios</a></li>
 <li><a class=link href=birt/2.6>birt/2.6</a></li>
 <li><a class=link href=gwt>gwt</a></li>
@@ -64,6 +66,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <li><a class=link href=webtools/3.2>webtools/3.2</a></li>
 <li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
 <p>
+<h2>JBoss Tools 3.1 / Eclipse 3.5 Galileo / Web Tools 3.1</h2>
 <li><a class=link href=galileo>galileo</a></li>
 
 				</ul>
