fix HTML page titles for birt, gwt, swtbot, webtools; add tptp builder for 4.7
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29515 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/tptp/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/tptp/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>JBoss Tools Build Requirements - SWTBot Updates</title>
+<title>JBoss Tools Build Requirements - TPTP Updates</title>
 <style>
 @import url("../../web/site.css");
 </style>
@@ -18,7 +18,7 @@
 	<tr>
 		<td>&#160;&#160;</td>
 		<td>
-		<h2 class="title">JBoss Tools Build Requirements - SWTBot Updates</h2>
+		<h2 class="title">JBoss Tools Build Requirements - TPTP Updates</h2>
 		<table width="100%">
 
 			<!-- <tr class="light-row" style="height: 30px">
@@ -46,7 +46,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=2.0.3>2.0.3</a> </li>
+<li><a class=link href=4.7>4.7</a> </li>
 				</ul>
 				<br/>
 				</td>
