--- a/download.jboss.org/jbosstools/updates/requirements/gwt/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/gwt/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>JBoss Tools Build Requirements - Orbit Update Sites</title>
+<title>JBoss Tools Build Requirements - GWT Updates</title>
 <style>
 @import url("../../web/site.css");
 </style>
@@ -18,7 +18,7 @@
 	<tr>
 		<td>&#160;&#160;</td>
 		<td>
-		<h2 class="title">JBoss Tools Build Requirements - Orbit Update Sites</h2>
+		<h2 class="title">JBoss Tools Build Requirements - GWT Updates</h2>
 		<table width="100%">
 
 			<!-- <tr class="light-row" style="height: 30px">
