update TP folders, requirements builders/index.html pages, and add new links to reqs from helios & indigo composite sites
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29531 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/index.html
+++ b/download.jboss.org/jbosstools/updates/index.html
@@ -65,8 +65,9 @@ http://download.jboss.org/jbosstools/updates/
 <li><a class=link href=nightly>Nightly Builds</a></li>
 <br/>
 <b>Target Platforms</b><br/>
-<li><a class=link href=target-platform>All JBoss Tools 3.2 dependencies in one update site</a> (for installing or developing)
-<li><a class=link href=target-platform_trunk>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing)
+<li><a class=link href=target-platform>All JBoss Tools 3.2 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)
+<li><a class=link href=target-platform_trunk>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)
+<li><a class=link href=target-platform_3.3.indigo>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.7) [experimental]
 				</ul>
 				<br/>
 				</td>
