--- a/download.jboss.org/jbosstools/updates/requirements/eclipse/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/eclipse/index.html
@@ -46,7 +46,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=3.7>3.7</a> </li>
+<li><a class=link href=3.7M5>3.7M5</a> </li>
 				</ul>
 				<br/>
 				</td>
