--- a/download.jboss.org/jbosstools/updates/target-platform_3.3.indigo/latest/index.html
+++ b/download.jboss.org/jbosstools/updates/target-platform_3.3.indigo/latest/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>JBoss Tools Build Target Platform Update Site - Helios (Eclipse 3.6 / Web Tools 3.2)</title>
+<title>JBoss Tools Build Target Platform Update Site - Indigo (Eclipse 3.7 / Web Tools 3.3)</title>
 <style>
 @import url("../../../web/site.css");
 </style>
@@ -18,16 +18,16 @@
 	<tr>
 		<td>&#160;&#160;</td>
 		<td>
-		<h2 class="title">JBoss Tools Build Target Platform Update Site - Helios (Eclipse 3.6 / Web Tools 3.2)</h2>
+		<h2 class="title">JBoss Tools Build Target Platform Update Site - Indigo (Eclipse 3.7 / Web Tools 3.3)</h2>
 		<table width="100%">
 			<tr class="dark-row" style="height: 30px">
 				<td class="bodyText">
 				<br/>
 				<ul>
-<li>Eclipse Helios 3.6 / Web Tools 3.2 / other dependencies
+<li>Eclipse Indigo Eclipse 3.7 / Web Tools 3.3/ other dependencies
 <ul>
 <li><a class=link href=../latest>latest target platform build</a> - point Eclipse at this site and install the <b>uncategorized</b> features</li>
-<li><a class=link href=../e362-wtp323.target.zip>latest target platform zip</a> (<a class=link href=e362-wtp323.target.zip.MD5>MD5</a>) - approx. 624 Mb</li>
+<li><a class=link href=../e37M5-wtp33M5.target.zip>latest target platform zip</a> (<a class=link href=e37M5-wtp33M5.target.zip.MD5>MD5</a>) - approx. 618 Mb</li>
 </ul>
 				</ul>
 				</ul>
