--- a/download.jboss.org/jbosstools/updates/target-platform_trunk/index.html
+++ b/download.jboss.org/jbosstools/updates/target-platform_trunk/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=http://download.jboss.org/jbosstools/updates/target-platform/latest/"> 
+<meta http-equiv="refresh" content="0;url=latest/"> 
 </head>
 </html>
 
