--- a/download.jboss.org/jbosstools/updates/target-platform_trunk/latest/index.html
+++ b/download.jboss.org/jbosstools/updates/target-platform_trunk/latest/index.html
@@ -27,7 +27,7 @@
 <li>Eclipse Helios 3.6 / Web Tools 3.2 / other dependencies
 <ul>
 <li><a class=link href=../latest>latest target platform build</a> - point Eclipse at this site and install the <b>uncategorized</b> features</li>
-<li><a class=link href=../e361-wtp322.target.zip>latest target platform zip</a> (<a class=link href=e361-wtp322.target.zip.MD5>MD5</a>) - approx. 1.2 Gb</li>
+<li><a class=link href=../e362-wtp323.target.zip>latest target platform zip</a> (<a class=link href=e362-wtp323.target.zip.MD5>MD5</a>) - approx. 624 Mb</li>
 </ul>
 				</ul>
 				</ul>
