--- a/download.jboss.org/jbosstools/updates/requirements/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/index.html
@@ -49,12 +49,19 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <h2>JBoss Tools 3.3 / Eclipse 3.7 Indigo / Web Tools 3.3</h2>
 <li><a class=link href=indigo>indigo</a></li>
 <li><a class=link href=birt/4.0>birt/4.0</a></li>
+<li><a class=link href=ecf>ecf</a></li>
+<li><a class=link href=eclipse>eclipse</a></li>
+<li><a class=link href=emf>emf</a></li>
 <li><a class=link href=gwt>gwt</a></li>
+<li><a class=link href=m2eclipse>m2eclipse</a></li>
 <li><a class=link href=orbit/S20110124210048>orbit/S20110124210048</a></li>
+<li><a class=link href=subclipse>subclipse</a></li>
+<li><a class=link href=subversive>subversive</a></li>
 <li><a class=link href=swtbot/2.0.3>swtbot/2.0.3</a></li>
+<li><a class=link href=tptp>tptp/4.7</a></li>
 <li><a class=link href=webtools/3.3>webtools/3.3</a></li>
 <li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
-<li><a class=link href=xulrunner-1.9.2>xulrunner-1.9.2</a></li>
+<li><a class=link href=xulrunner-1.9.2>xulrunner-1.9.2</a> (?)</li>
 <p>
 <h2>JBoss Tools 3.2 / Eclipse 3.6 Helios / Web Tools 3.2</h2>
 <li><a class=link href=helios>helios</a></li>
@@ -63,6 +70,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 <li><a class=link href=orbit/R20100519200754>orbit/R20100519200754</a></li>
 <li><a class=link href=thirdparty>thirdparty</a></li>
 <li><a class=link href=swtbot-helios>swtbot-helios</a></li>
+<li><a class=link href=tptp>tptp/4.7</a></li>
 <li><a class=link href=webtools/3.2>webtools/3.2</a></li>
 <li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
 <p>
