--- a/download.jboss.org/jbosstools/updates/requirements/webtools/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/webtools/index.html
@@ -46,8 +46,8 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=3.3>3.3</a> (Indigo) </li>
-<li><a class=link href=3.2>3.2</a> (Helios) </li>
+<li><a class=link href=3.3M5>3.3M5</a> (Indigo) </li>
+<li><a class=link href=3.2.3>3.2.3</a> (Helios) </li>
 				</ul>
 				<br/>
 				</td>
