--- a/download.jboss.org/jbosstools/updates/requirements/ecf/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/ecf/index.html
@@ -46,7 +46,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=3.4M5>3.4M5</a> </li>
+<li><a class=link href=3.4>3.4</a> </li>
 				</ul>
 				<br/>
 				</td>
