--- a/download.jboss.org/jbosstools/updates/requirements/emf/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/emf/index.html
@@ -47,6 +47,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 				<br/>
 				<ul>
 <li><a class=link href=2.7>2.7</a> </li>
+<li><a class=link href=2.6>2.6</a> </li>
 				</ul>
 				<br/>
 				</td>
