update links to reqs in index page
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29609 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/index.html
@@ -48,30 +48,36 @@ http://download.jboss.org/jbosstools/updates/requirements/
 				<ul>
 <h2>JBoss Tools 3.3 / Eclipse 3.7 Indigo / Web Tools 3.3</h2>
 <li><a class=link href=indigo>indigo</a></li>
-<li><a class=link href=birt/4.0>birt/4.0</a></li>
+<li><a class=link href=birt>birt</a></li>
 <li><a class=link href=ecf>ecf</a></li>
 <li><a class=link href=eclipse>eclipse</a></li>
 <li><a class=link href=emf>emf</a></li>
-<li><a class=link href=gwt>gwt</a></li>
+<li><a class=link href=gwt/201102111811>gwt/201102111811</a></li>
 <li><a class=link href=m2eclipse>m2eclipse</a></li>
 <li><a class=link href=orbit/S20110124210048>orbit/S20110124210048</a></li>
 <li><a class=link href=subclipse>subclipse</a></li>
 <li><a class=link href=subversive>subversive</a></li>
 <li><a class=link href=swtbot/2.0.3>swtbot/2.0.3</a></li>
-<li><a class=link href=tptp>tptp/4.7</a></li>
-<li><a class=link href=webtools/3.3>webtools/3.3</a></li>
+<li><a class=link href=tptp/4.7>tptp/4.7</a></li>
+<li><a class=link href=webtools>webtools</a></li>
 <li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
 <li><a class=link href=xulrunner-1.9.2>xulrunner-1.9.2</a> (?)</li>
 <p>
 <h2>JBoss Tools 3.2 / Eclipse 3.6 Helios / Web Tools 3.2</h2>
 <li><a class=link href=helios>helios</a></li>
 <li><a class=link href=birt/2.6.2>birt/2.6.2</a></li>
-<li><a class=link href=gwt>gwt</a></li>
+<li><a class=link href=ecf>ecf/3.4</a></li>
+<li><a class=link href=eclipse>eclipse/3.6</a></li>
+<li><a class=link href=emf>emf/2.6</a></li>
+<li><a class=link href=gwt/201012211742>gwt/201012211742</a></li>
 <li><a class=link href=orbit/R20100519200754>orbit/R20100519200754</a></li>
-<li><a class=link href=thirdparty>thirdparty</a></li>
-<li><a class=link href=swtbot-helios>swtbot-helios</a></li>
+<li><a class=link href=m2eclipse/0.11>m2eclipse/0.11</a></li>
+<li><a class=link href=thirdparty>thirdparty</a> (deprecated)</li>
+<li><a class=link href=subclipse/1.6>subclipse/1.6</a></li>
+<li><a class=link href=subversive/0.7.9_2.2.2>subversive/0.7.9_2.2.2</a></li>
+<li><a class=link href=swtbot/2.0.3>swtbot/2.0.3</a></li>
 <li><a class=link href=tptp>tptp/4.7</a></li>
-<li><a class=link href=webtools/3.2>webtools/3.2</a></li>
+<li><a class=link href=webtools/3.2.3>webtools/3.2.3</a></li>
 <li><a class=link href=xulrunner-1.9.1.2>xulrunner-1.9.1.2</a></li>
 <p>
 <h2>JBoss Tools 3.1 / Eclipse 3.5 Galileo / Web Tools 3.1</h2>
