update updates/index.html so it works on both reports.qa and download.jb.org; fix m2eclipse links
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@29610 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/index.html
+++ b/download.jboss.org/jbosstools/updates/index.html
@@ -46,28 +46,37 @@ http://download.jboss.org/jbosstools/updates/
 -->
 				<br/>
 				<ul>
-<b>Latest Stable Releases</b><br/>
-<li><a class=link href=stable/helios>JBoss Tools 3.2, Eclipse 3.6 (Helios)</a></li>
-<li><a class=link href=stable/galileo>JBoss Tools 3.1, Eclipse 3.5 (Galileo)</a></li>
-<li><a class=link href=stable/ganymede>JBoss Tools 3.0, Eclipse 3.4 (Ganymede)</a></li>
-<br/>
-<b>Stable Releases</b><br/>
-<li><a class=link href=JBossTools-3.2.0.GA>JBossTools-3.2.0.GA</a></li>
-<li><a class=link href=JBossTools-3.1.1.GA>JBossTools-3.1.1.GA</a></li>
-<li><a class=link href=JBossTools-3.0.3.GA.zip>JBossTools-3.0.3.GA.zip</a></li>
-<li><a class=link href=JBossTools-3.0.3.GA>JBossTools-3.0.3.GA</a></li>
-<li><a class=link href=JBossTools-2.1.2.GA>JBossTools-2.1.2.GA</a></li>
-<li><a class=link href=JBossTools-2.0.1.GA>JBossTools-2.0.1.GA</a></li>
-<li><a class=link href=JBossIDE-2.0.0.Beta2>JBossIDE-2.0.0.Beta2</a></li>
+<b>Stable JBoss Tools Releases</b><br/>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/stable/helios>JBoss Tools 3.2, Eclipse 3.6 (Helios)</a></li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/stable/galileo>JBoss Tools 3.1, Eclipse 3.5 (Galileo)</a></li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/stable/ganymede>JBoss Tools 3.0, Eclipse 3.4 (Ganymede)</a></li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/JBossTools-3.0.3.GA.zip>JBossTools-3.0.3.GA.zip</a></li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/JBossTools-2.1.2.GA>JBossTools-2.1.2.GA</a></li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/JBossTools-2.0.1.GA>JBossTools-2.0.1.GA</a></li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/JBossIDE-2.0.0.Beta2>JBossIDE-2.0.0.Beta2</a></li>
 <br/>
 <b>Other Updates</b><br/>
+<li><a class=link href=stable>Stable Builds</a></li>
 <li><a class=link href=development>Development Milestones</a> (toward JBoss Tools 3.3, Eclipse 3.7 (Indigo)) <i>-- coming soon!</i></li>
 <li><a class=link href=nightly>Nightly Builds</a></li>
 <br/>
-<b>Target Platforms</b><br/>
-<li><a class=link href=target-platform>All JBoss Tools 3.2 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)
-<li><a class=link href=target-platform_trunk>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)
-<li><a class=link href=target-platform_3.3.indigo>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.7) [experimental]
+<b>Dependencies &amp; Requirements</b><br/>
+<li><a class=link href=indigo>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.7)</li>
+<li><a class=link href=helios>All JBoss Tools 3.2 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
+<li><a class=link href=requirements>All JBoss Tools dependencies in collection of update site</a> (for installing or developing)</li>
+<br/>
+<b>JBT Target Platforms</b><br/>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/target-platform_3.3.indigo>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.7) [experimental]</li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/target-platform_trunk>All JBoss Tools 3.3 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
+<li><a class=link href=http://download.jboss.org/jbosstools/updates/target-platform>All JBoss Tools 3.2 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
+<br/>
+<b>JBDS Target Platforms</b><br/>
+<li><a style="color: red" class=link href=http://reports.qa.atl.jboss.com/binaries/RHDS/updates/jbds-target-platform_3.3.indigo>All JBoss Developer Studio 5.0 dependencies in one update site</a> (for installing or developing with Eclipse 3.7) [experimental]</li>
+<li><a style="color: red" class=link href=http://reports.qa.atl.jboss.com/binaries/RHDS/updates/jbds-target-platform_trunk>All JBoss Developer Studio 5.0 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
+<li><a style="color: red" class=link href=http://reports.qa.atl.jboss.com/binaries/RHDS/updates/jbds-target-platform>All JBoss Developer Studio 4.0 dependencies in one update site</a> (for installing or developing with Eclipse 3.6)</li>
+<br/>
+<p class="bodyText"><i>Note: <b style="color: red">red
+		links</b> require VPN access.</i>
 				</ul>
 				<br/>
 				</td>
