--- a/download.jboss.org/jbosstools/updates/requirements/m2eclipse/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/m2eclipse/index.html
@@ -47,6 +47,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 				<br/>
 				<ul>
 <li><a class=link href=0.12>0.12</a> </li>
+<li><a class=link href=0.13.0.201103291237>0.13.0.201103291237</a> </li>
 				</ul>
 				<br/>
 				</td>
