--- a/download.jboss.org/jbosstools/updates/requirements/birt/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/birt/index.html
@@ -46,6 +46,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
+<li><a class=link href=4.0M6>4.0M6</a> (Indigo) </li>
 <li><a class=link href=4.0M5>4.0M5</a> (Indigo) </li>
 <li><a class=link href=2.6.2>2.6.2</a> (Helios) </li>
 				</ul>
