--- a/download.jboss.org/jbosstools/updates/requirements/eclipse/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/eclipse/index.html
@@ -46,6 +46,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
+<li><a class=link href=3.7M6>3.7M6</a> </li>
 <li><a class=link href=3.7M5>3.7M5</a> </li>
 <li><a class=link href=3.6.2>3.6.2</a> </li>
 				</ul>
