--- a/download.jboss.org/jbosstools/updates/requirements/indigo/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/indigo/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>JBoss Tools Build Requirements - Webtools Updates</title>
+<title>JBoss Tools Build Requirements - Indigo Updates</title>
 <style>
 @import url("../../web/site.css");
 </style>
@@ -18,7 +18,7 @@
 	<tr>
 		<td>&#160;&#160;</td>
 		<td>
-		<h2 class="title">JBoss Tools Build Requirements - Webtools Updates</h2>
+		<h2 class="title">JBoss Tools Build Requirements - Indigo Updates</h2>
 		<table width="100%">
 
 			<!-- <tr class="light-row" style="height: 30px">
@@ -46,9 +46,8 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=3.3M6>3.3M6</a> (Indigo) </li>
-<li><a class=link href=3.3M5>3.3M5</a> (Indigo) </li>
-<li><a class=link href=3.2.3>3.2.3</a> (Helios) </li>
+<li><a class=link href=M6>M6</a> </li>
+<li><a class=link href=M5>M5</a> </li>
 				</ul>
 				<br/>
 				</td>
