--- a/download.jboss.org/jbosstools/updates/requirements/indigo/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/indigo/index.html
@@ -46,8 +46,8 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=M6-201103180900>M6-201103180900</a> </li>
-<li><a class=link href=M5-201102040900>M5-201102040900</a> </li>
+<li><a class=link href=201103180900-M6>201103180900-M6</a> </li>
+<li><a class=link href=201102040900-M5>201102040900-M5</a> </li>
 				</ul>
 				<br/>
 				</td>
