include new ECF 3.5 builder
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30255 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/requirements/ecf/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/ecf/index.html
@@ -46,7 +46,8 @@ http://download.jboss.org/jbosstools/updates/requirements/
 -->
 				<br/>
 				<ul>
-<li><a class=link href=3.4>3.4</a> </li>
+<li><a class=link href=3.5>3.5</a> (Eclipse 3.6 - 3.7)</li>
+<li><a class=link href=3.4>3.4</a> (Eclipse 3.5 - 3.6)</li>
 				</ul>
 				<br/>
 				</td>
