--- a/download.jboss.org/jbosstools/updates/requirements/swtbot/index.html
+++ b/download.jboss.org/jbosstools/updates/requirements/swtbot/index.html
@@ -47,6 +47,7 @@ http://download.jboss.org/jbosstools/updates/requirements/
 				<br/>
 				<ul>
 <li><a class=link href=2.0.3>2.0.3</a> </li>
+<li><a class=link href=2.0.4>2.0.4</a> </li>
 				</ul>
 				<br/>
 				</td>
