tweak html page for 3.3.indigo TP, and set trunk TP pages to redirect to 3.3.indigo since trunk and branch are now merged
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@30284 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/download.jboss.org/jbosstools/updates/target-platform_trunk/index.html
+++ b/download.jboss.org/jbosstools/updates/target-platform_trunk/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0;url=latest/"> 
+<meta http-equiv="refresh" content="0;url=../target-platform_3.3.indigo/latest/"> 
 </head>
 </html>
 
