--- a/download.jboss.org/jbosstools/updates/target-platform_3.3.indigo/latest/index.html
+++ b/download.jboss.org/jbosstools/updates/target-platform_3.3.indigo/latest/index.html
@@ -27,8 +27,7 @@
 <li>Eclipse Indigo Eclipse 3.7 / Web Tools 3.3/ other dependencies
 <ul>
 <li><a class=link href=../latest>latest target platform build</a> - point Eclipse at this site and install the <b>uncategorized</b> features</li>
-<li><a class=link href=../e37M6-wtp33M6.target.zip>latest target platform zip</a> (<a class=link href=e37M6-wtp33M6.target.zip.MD5>MD5</a>) - approx. 618 Mb</li>
-<li><a class=link href=../e37M5-wtp33M5.target.zip>latest target platform zip</a> (<a class=link href=e37M5-wtp33M5.target.zip.MD5>MD5</a>) - approx. 618 Mb</li>
+<li><a class=link href=../e37M6-wtp33M6.target.zip>latest target platform - e37M6-wtp33M6.target.zip</a> (<a class=link href=e37M6-wtp33M6.target.zip.MD5>MD5</a>) - approx. 603 Mb</li>
 </ul>
 				</ul>
 				</ul>
